# rag_agent

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
app/: main.py
app/application/: __init__.py
app/application/use_cases/: __init__.py  ask_documents.py  embed_documents.py  load_pdfs.py  persist_to_vector_store.py  query_documents.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  embedded_chunk.py  raw_document.py  search_hit.py
app/domain/ports/: __init__.py  document_loader_port.py  embeddings_port.py  llm_port.py  text_splitter_port.py  vector_search_port.py  vector_store_port.py
app/infrastructure/: __init__.py
app/infrastructure/embeddings/: __init__.py  langchain_openai_embeddings.py
app/infrastructure/llm/: __init__.py  langchain_openai_chat.py  prompts.py
app/infrastructure/loaders/: __init__.py  langchain_pypdf_loader.py
app/infrastructure/settings/: __init__.py  database.py  langchain.py  openai.py  pdf_paths.py
app/infrastructure/splitters/: __init__.py  langchain_recursive_character_splitter.py
app/infrastructure/vectorstores/: __init__.py  chroma_vector_search.py  chroma_vector_store.py
app/interfaces/: __init__.py
app/interfaces/api/: __init__.py
app/interfaces/api/v1/: dependencies.py  router.py  schemas.py
