[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain>=1.2.12",
    "openai>=2.29.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=6.9.1",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
]
